<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.cart.CartFragment">



    <TextView
        android:id="@+id/cart_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_cart"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cart_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_title">
        <TextView
            android:id="@+id/cart_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 items"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/cart_subtotal_price"
            app:layout_constraintTop_toBottomOf="@+id/cart_subtitle" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sub_total"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cart_shipping_price"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cart_subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="$209.85"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cart_shipping_price"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/shipping"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/break_line"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cart_shipping_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="$5.00"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/break_line"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/break_line"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="20dp"
            android:layerType="software"
            android:src="@drawable/dash_line"
            app:layout_constraintBottom_toTopOf="@+id/cart_total_price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="24dp"
            android:text="@string/bag_total"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/checkout_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cart_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="$214.85"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/checkout_btn"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/cart_orange_bg"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        style="@style/SpinKitView.ThreeBounce"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>